gobmkida/g2/dragon_escape
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2242:7: error: use of undeclared identifier 'mx_initialized_1'
if ( !mx_initialized_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2244:1: error: use of undeclared identifier 'mx_initialized_1'
mx_initialized_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2245:26: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2245:9: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2253:1: error: use of undeclared identifier 'mx_0'
mx_0[v4] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2281:19: error: use of undeclared identifier 'mx_0'
if ( v13 != 3 && !mx_0[v12] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2292:1: error: use of undeclared identifier 'mx_0'
mx_0[v12] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2299:19: error: use of undeclared identifier 'mx_0'
if ( v19 != 3 && !mx_0[v18] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2310:1: error: use of undeclared identifier 'mx_0'
mx_0[v18] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2317:19: error: use of undeclared identifier 'mx_0'
if ( v25 != 3 && !mx_0[v24] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2328:1: error: use of undeclared identifier 'mx_0'
mx_0[v24] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2335:19: error: use of undeclared identifier 'mx_0'
if ( v31 != 3 && !mx_0[v30] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2346:1: error: use of undeclared identifier 'mx_0'
mx_0[v30] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2361:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 + 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2371:1: error: use of undeclared identifier 'mx_0'
mx_0[v42] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2380:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 - 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2390:1: error: use of undeclared identifier 'mx_0'
mx_0[v44] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2399:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 - 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2409:1: error: use of undeclared identifier 'mx_0'
mx_0[v46] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2418:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 + 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2428:1: error: use of undeclared identifier 'mx_0'
mx_0[v48] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2498:6: error: use of undeclared identifier 'mx_0'
if ( mx_0[v38] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/engine/dragon.c:2508:1: error: use of undeclared identifier 'mx_0'
mx_0[v38] = 0; 
^
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/dragon_escape/src/obj/1/dragon.o] Error 1
